Add animation for frame buffer   Committer: DDamir <ddokih@yahoo.co.uk> 	modified:   lib/base/cfile.cpp 	modified:   lib/base/cfile.h 	modified:   lib/gdi/gfbdc.cpp 	modified:   lib/gdi/grc.cpp 	modified:   lib/gdi/grc.h 	modified:   lib/gui/ewidgetdesktop.cpp 	modified:   lib/gui/ewidgetdesktop.h 	modified:   lib/gui/ewindow.cpp 	modified:   lib/gui/ewindow.h 	modified:   lib/python/Components/VolumeControl.py 	modified:   lib/python/Components/config.py 	modified:   lib/python/Plugins/SystemPlugins/Makefile.am 	modified:   lib/python/Screens/ChannelSelection.py 	modified:   lib/python/Screens/InfoBarGenerics.py 	modified:   lib/python/Screens/Screen.py 	modified:   lib/python/Screens/Wizard.py 	modified:   lib/python/enigma_python.i 	modified:   main/enigma.cpp 	modified:   skin.py 	modified:   tests/enigma.py

--- a/lib/python/Plugins/SystemPlugins/Makefile.am
+++ b/lib/python/Plugins/SystemPlugins/Makefile.am
@@ -1,10 +1,11 @@
 installdir = $(pkglibdir)/python/Plugins/SystemPlugins
 
-SUBDIRS = AnimationSetup SoftwareManager PositionerSetup Satfinder \
+SUBDIRS = SoftwareManager PositionerSetup Satfinder \
 	SkinSelector SatelliteEquipmentControl Videomode VideoTune Hotplug \
 	DefaultServicesScanner DiseqcTester CommonInterfaceAssignment \
 	CableScan FastScan OSDPositionSetup OSD3DSetup HdmiCEC VideoClippingSetup \
-	VideoEnhancement WirelessLan NetworkWizard DeviceManager SwapManager
+	VideoEnhancement WirelessLan NetworkWizard DeviceManager \
+	SwapManager AnimationSetup
 
 install_PYTHON =	\
 	__init__.py
